# SCTP_DS3F_Module2_Assignment_Team7

./: .gitignore  README.md
assets/: ListenBrainz_Technical_Design_Documentation.docx
listenbrainz_GCP/: dbt_project.yml
listenbrainz_GCP/models/marts/: dim_album.sql  dim_artist.sql  dim_date.sql  dim_time.sql  dim_track.sql  dim_user.sql  fact_listening_events.sql  schema.yml
listenbrainz_GCP/models/staging/: schema.yml  sources.yml  stg_listenbrainz_listens.sql
listenbrainz_dagster/: README.md  pyproject.toml  setup.py
listenbrainz_dagster/.tmp_dagster_home_z8vz8o31/history/: runs.db
listenbrainz_dagster/.tmp_dagster_home_z8vz8o31/history/runs/: .db  index.db
listenbrainz_dagster/.tmp_dagster_home_z8vz8o31/schedules/: schedules.db
listenbrainz_dagster/listenbrainz_dagster/: assets.py  constants.py  definitions.py  project.py  schedules.py
listenbrainz_gcp/: .user.yml  README.md  dbt_project.yml  profiles.yml
listenbrainz_streamlit_app/: .dockerignore  Docker  README.md  app.py  requirements.txt
listenbrainz_streamlit_app/pages/: 2_Streaming_Enhancement.py
notebook/: listenbrainz_star_schema_business_analysis.ipynb  listenbrainz_star_schema_prediction_model.ipynb
notebooks/: listenbrainz_bigquery_data_quality_checks.ipynb  listenbrainz_star_schema_business_analysis.ipynb  listenbrainz_star_schema_data_quality_checks.ipynb  listenbrainz_star_schema_prediction_model.ipynb
notebooks/listenbrainz_star_schema_dq_outputs/: star_schema_data_quality_results.csv
test/: listenbrainz_bigquery_data_quality_checks.ipynb
(+11 files in other folders)
